--- a/voltgo/usuario/templates/account/dashboard.html
+++ b/voltgo/usuario/templates/account/dashboard.html
@@ -3,8 +3,11 @@
 {% block title %}Dashboard{% endblock %}
 
 {% block content %}
- 	<h1>Dashboard</h1>
- 	<p>Welcome to your dashboard. You can <a href="{% url "edit" %}">edit
-	your profile</a> or <a href="{% url "password_change" %}">change your
-	password</a>.</p>
+<div class="text-center justify-content-center align-center" style="border: none;">
+	<h1>Dashboard</h1>
+	<p>Hola, {{ user.username }}!</p>
+	<p>Has iniciado sesión correctamente.</p>
+	<p>Navega para alquilar cualquier bicicleta</p>
+</div>
+
 {% endblock %}
