feat(buscador): creado buscador para el catalogo con 3 posibles parametros #7

--- a/voltgo/producto/templates/catalogo.html
+++ b/voltgo/producto/templates/catalogo.html
@@ -7,6 +7,12 @@
 </head>
 <body>
     <h1>Catálogo de Motos Eléctricas</h1>
+    <div id="buscador-container">
+        <form method="get">
+            {{ form.as_p }}
+            <button type="submit">Buscar</button>
+        </form>
+    </div>
     <div id="productos-container">
         {% for producto_dict in productos %}
             <div class = producto id="producto-catalogo" data-url="{{ producto_dict.producto.id }}">
