--- a/voltgo/usuario/templates/account/login.html
+++ b/voltgo/usuario/templates/account/login.html
@@ -1,9 +1,11 @@
 {% extends "base.html" %}
-{% block title %}Log-in{% endblock %}
 
 {% block content %}
+<div class="text-center">
+  <h1>Iniciar sesión</h1>
+</div>
+<br/>
 <div class="text-center justify-content-center align-center">
-  <h1>Log-in</h1>
   <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
@@ -13,10 +15,10 @@
   {% if messages %}
   <ul class="messages">
     {% for message in messages %}
-      <p style="color: red;"{% if message.tags %} class="{{ message.tags }}"{% endif %}>{{ message }}</p>
+    <p style="color: red;" {% if message.tags %} class="{{ message.tags }}" {% endif %}>{{ message }}</p>
     {% endfor %}
   </ul>
-{% endif %}
+  {% endif %}
 
 </div>
 {% endblock %}
