--- a/voltgo/producto/templates/catalogo.html
+++ b/voltgo/producto/templates/catalogo.html
@@ -1,11 +1,6 @@
-{% block content %} {% load static %}
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title></title>
-    <link rel="stylesheet" href='{% static "detalle.css" %}' />
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block content %}
     <h1>Catálogo de Motos Eléctricas</h1>
     <div id="buscador-container">
         <form method="get">
@@ -13,24 +8,38 @@
             <button type="submit">Buscar</button>
         </form>
     </div>
-    <div id="productos-container">
+    <br/>
+    <div class="row">
         {% for producto_dict in productos %}
-            <div class = producto id="producto-catalogo" data-url="{{ producto_dict.producto.id }}">
-                <img id="catalogo-img"
-                    src="{{ producto_dict.producto.url_imagen }}"
-                    alt="{{ producto_dict.producto.nombre }}">
-                <p>{{ producto_dict.producto.nombre }}</p>
-                <p>Precio: ${{ producto_dict.producto.precio_base }}</p>
-                <p>Autonomía: {{ producto_dict.autonomia }} horas</p>
-                <p>Velocidad Máxima: {{ producto_dict.velocidad_maxima }} Km/h</p>
+            <div class="col-md-3">
+                <div class="card">
+                    <img class="card-img-top" src="{{ producto_dict.producto.url_imagen }}" alt="{{ producto_dict.producto.nombre }}">
+                    <div class="card-body">
+                        <h5 class="card-title">{{ producto_dict.producto.nombre }}</h5>
+                        <p class="card-text">Precio: ${{ producto_dict.producto.precio_base }}</p>
+                        <p class="card-text">Autonomía: {{ producto_dict.autonomia }} horas</p>
+                        <p class="card-text">Velocidad Máxima: {{ producto_dict.velocidad_maxima }} Km/h</p>
+                        <a href="{% url 'detalle-producto' pk=producto_dict.producto.id %}" class="btn btn-primary">Detalles</a>
+                    </div>
+                </div>
             </div>
+
+            {% if forloop.counter|divisibleby:4 %}
+                </div><div class="row">
+            {% endif %}
         {% endfor %}
     </div>
 
+    <br/>
+    <br/>
+
+    {% if not productos %}
+        <p>No se encontraron productos</p>
+    {% endif %}
+
     <script>
-        
         document.addEventListener('DOMContentLoaded', function () {
-            var productos = document.querySelectorAll('.producto');
+            var productos = document.querySelectorAll('.card');
             productos.forEach(function (producto) {
                 producto.addEventListener('click', function () {
                     var url = '/productos/' + producto.getAttribute('data-url') + '/';
@@ -39,5 +48,4 @@
             });
         });
     </script>
-</body>
-{% endblock content %}
+{% endblock %}
