--- a/voltgo/tienda/templates/navbar.html
+++ b/voltgo/tienda/templates/navbar.html
@@ -14,7 +14,7 @@
   <nav class="navbar navbar-expand-lg bg-body-tertiary pt-4 pb-4">
     <div class="container-fluid bg-success">
       <a class="navbar-brand" href="/home">
-        <img src="../static/images/LogoVoltGo.jpeg" alt="Logo" width="60" height="60"
+        <img src="../../tienda/static/images/LogoVoltGo.jpeg" alt="Logo" width="60" height="60"
           class="d-inline-block align-text-middle">
       </a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -29,7 +29,7 @@
             </a>
           </li>
           <li class="nav-item" id="nav-elemento">
-            <a class="nav-link active" aria-current="page" href="#">
+            <a class="nav-link active" aria-current="page" href="/productos/catalogo/">
               <h7 style="color: white;">Catálogo</h7>
             </a>
           </li>
