feat(tienda): Añadida página sobre la us
Se ha añadido una página como url en que se muestra información sobre la US.

--- a/voltgo/tienda/templates/navbar.html
+++ b/voltgo/tienda/templates/navbar.html
@@ -33,6 +33,12 @@
               <h7 style="color: white;">Catálogo</h7>
             </a>
           </li>
+          <li class="nav-item" id="nav-elemento">
+            <a class="nav-link active" aria-current="page" href="/about/">
+              <h7 style="color: white;">Sobre la US</h7>
+            </a>
+          </li>
+          <!-- Poner más elementos aquí -->
         </ul>
         <ul class="navbar-nav ms-auto mb-2 mb-lg-0 mt-4">
           {% if request.user.is_authenticated %}
