fix(usuario): Creación de objeto Perfil tras registro
Se ha añadido que tras el registro, se le asocie al usuario un perfil en el que pueda tener más atributos de datos personales.

--- a/voltgo/tienda/templates/navbar.html
+++ b/voltgo/tienda/templates/navbar.html
@@ -45,9 +45,8 @@
               <h7 style="color: white;">Sobre la US</h7>
             </a>
           </li>
-          <!-- Poner más elementos aquí -->
         </ul>
-        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 mt-4">
+        <ul class="navbar-nav ms-auto mb-2 mb-lg-0 mt-4 mr-5 pr-5">
           {% if request.user.is_authenticated %}
           <li class="nav-item dropdown">
             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
