--- a/voltgo/usuario/templates/account/edit.html
+++ b/voltgo/usuario/templates/account/edit.html
@@ -3,12 +3,20 @@
 {% block title %}Edit your account{% endblock %}
 
 {% block content %}
-	<h1>Edit your account</h1>
-	<p>You can edit your account using the following form:</p>
-	<form method="post" enctype="multipart/form-data">
-		{{ user_form.as_p }}
-		{{ profile_form.as_p }}
-		{% csrf_token %}
-		<p><input type="submit" value="Save changes"></p>
-	</form>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-8 offset-md-2">
+                <h1 class="display-4 text-center mb-4">Edit Your Account</h1>
+                <p class="lead text-center">You can edit your account using the following form:</p>
+                <form method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ user_form.as_p|bootstrap }}
+                    {{ profile_form.as_p|bootstrap }}
+                    <div class="text-center mt-4">
+                        <button type="submit" class="btn btn-primary">Save Changes</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
