--- a/voltgo/usuario/templates/account/gestionar_perfil.html
+++ b/voltgo/usuario/templates/account/gestionar_perfil.html
@@ -1,14 +1,22 @@
-<!-- gestionar_perfil.html -->
-{% extends 'base.html' %}
+{% extends "base.html" %}
+
+{% block title %}Edit your account{% endblock %}
 
 {% block content %}
-  <h2>Edita perfil</h2>
-  <form method="post" enctype="multipart/form-data">
-    {% csrf_token %}
-    {{ user_form.as_p }}
-    {{ profile_form.as_p }}
-    <button type="submit">Guardar Cambios</button>
-  </form>
-  <button type="submit">Añadir dirección</button>
-  <button type="submit">Añadir método de pago</button>
+    <div class="container mt-5">
+        <div class="row">
+            <div class="col-md-8 offset-md-2 text-center mx-auto">
+                <h1 class="display-4 text-center mb-4">Edita tus datos personales</h1>
+                <p class="lead text-center">Puedes editar tu perfil cambiando estos campos:</p>
+                <form method="post" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    {{ user_form.as_p }}
+                    {{ profile_form.as_p }}
+                    <div class="text-center mt-4">
+                        <button type="submit" class="btn btn-primary">Save Changes</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 {% endblock %}
