--- a/voltgo/producto/templates/detalle.html
+++ b/voltgo/producto/templates/detalle.html
@@ -16,7 +16,11 @@
           <h1 class="card-title display-4">Tecnología de {{ object.empresa.nombre }}</h1>
           <h2 class="h3">{{ object.nombre }}</h2>
           <p class="lead">{{ object.precio_base }} €/hora</p>
-          <button class="btn btn-lg btn-primary">Reservar ahora</button>
+          <a href="{% url 'agregar-al-carrito' pk=object.pk %}">
+            <button type="button" class="btn btn-primary">
+                Reservar
+            </button>
+        </a>
         </div>
       </div>
     </div>
