--- a/voltgo/producto/templates/carrito.html
+++ b/voltgo/producto/templates/carrito.html
@@ -2,7 +2,7 @@
 {% block content %}
 
 <div class="container mt-5">
-    <h1 class="mb-4">Carrito de Compras</h1>
+    <h1 class="mb-4">Compra</h1>
 
     {% if carrito %}
         <table class="table table-bordered">
