--- a/voltgo/producto/templates/carrito.html
+++ b/voltgo/producto/templates/carrito.html
@@ -15,46 +15,50 @@
                     <th>Opciones</th>
                 </tr>
             </thead>
-            <tbody>
-                {% for item in carrito %}
+            <form action="/productos/catalogo/carrito/pagar-carrito/" method="POST"></form>
+                {% csrf_token %}
+                <tbody>
+                    {% for item in carrito %}
+                        <tr>
+                            <input type='hidden' name='item[]' value='{{ item.id }}'>
+                            <td>{{ item.producto.nombre }}</td>
+                            <td>{{ item.cantidad }}</td>
+                            <td>{{ item.producto.precio_base }} €/ud</td>
+                            <td>{{ item.get_precio_total_producto }} €</td>
+                            <td>
+                                <div class="btn-group" role="group">
+                                    <a href="{% url 'agregar-al-carrito' pk=item.producto.pk %}">
+                                        <button type="button" class="btn btn-success btn-lg">
+                                            +
+                                        </button>
+                                    </a>
+                                    <a href="{% url 'eliminar-del-carrito' pk=item.producto.pk %}">
+                                        <button type="button" class="btn btn-danger btn-lg mx-2">
+                                            -
+                                        </button>
+                                    </a>
+                                </div>
+                            </td>
+                        </tr>
+                    {% endfor %}
+                </tbody>
+                <tfoot>
                     <tr>
-                        <td>{{ item.producto.nombre }}</td>
-                        <td>{{ item.cantidad }}</td>
-                        <td>{{ item.producto.precio_base }} €/ud</td>
-                        <td>{{ item.get_precio_total_producto }} €</td>
+                        <td colspan="3"></td>
+                        <td><strong>Total: {{ total }} €</strong></td>
                         <td>
-                            <div class="btn-group" role="group">
-                                <a href="{% url 'agregar-al-carrito' pk=item.producto.pk %}">
-                                    <button type="button" class="btn btn-success btn-lg">
-                                        +
-                                    </button>
-                                </a>
-                                <a href="{% url 'eliminar-del-carrito' pk=item.producto.pk %}">
-                                    <button type="button" class="btn btn-danger btn-lg mx-2">
-                                        -
-                                    </button>
-                                </a>
-                            </div>
-                        </td>
-                    </tr>
-                {% endfor %}
-            </tbody>
-            <tfoot>
-                <tr>
-                    <td colspan="3"></td>
-                    <td><strong>Total: {{ total }} €</strong></td>
-                    <td>
-                        <a href="{% url 'vaciar-carrito' %}">
-                            <button type="button" class="btn btn-warning">
-                                Vaciar carrito
-                            </button>
-                        </a>
-                            <button type="button" class="btn btn-warning">
+                            <a href="{% url 'vaciar-carrito' %}">
+                                <button type="button" class="btn btn-warning">
+                                    Vaciar carrito
+                                </button>
+                            </a>
+                            <button type="submit" class="btn btn-warning">
                                 Pagar ahora
                             </button>
-                    </td>
-                </tr>
-            </tfoot>
+                        </td>
+                    </tr>
+                </tfoot>
+            </form>
         </table>
     {% else %}
         <div class="alert alert-info" role="alert">
