--- a/voltgo/producto/templates/detalle.html
+++ b/voltgo/producto/templates/detalle.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 
 {% block content %} 
-<main class="container">
+<main class="container mt-4">
   <div class="card">
-    <div class="row no-gutters">
+    <div class="row g-0">
       <div class="col-md-6">
         <img
           src="{{ object.url_imagen }}"
           alt="Foto de {{ object.nombre }}"
-          class="card-img"
+          class="card-img-top"
         />
       </div>
       <div class="col-md-6">
@@ -16,35 +16,37 @@
           <h1 class="card-title display-4">Tecnología de {{ object.empresa.nombre }}</h1>
           <h2 class="h3">{{ object.nombre }}</h2>
           <p class="lead">{{ object.precio_base }} €/hora</p>
-          <a href="{% url 'agregar-al-carrito' pk=object.pk %}">
-            <button type="button" class="btn btn-primary">
-                Reservar
+          <p class="lead">Stock: {{ object.stock }} uds.</p>
+          <form method="post" action="{% url 'agregar-al-carrito' pk=object.pk %}">
+            {% csrf_token %}
+            <div class="mb-3">
+              <label for="cantidad" class="form-label">Cantidad:</label>
+              <input type="number" name="cantidad" id="cantidad" class="form-control" min="1" max="{{ object.stock }}" value="1">
+            </div>
+            <button type="submit" class="btn btn-primary">
+              Reservar
             </button>
-        </a>
+          </form>
         </div>
       </div>
     </div>
   </div>
 
   <div class="row mt-4">
-    <article class="col-md-6">
-      <div>
-        <h1>Descripción</h1>
-      </div>
+    <div class="col-md-6">
+      <h1>Descripción</h1>
       <p>{{ object.descripcion }}</p>
-    </article>
+    </div>
 
     {% if object.caracteristicas %}
-    <article class="col-md-6">
-      <div>
-        <h1>Características</h1>
-      </div>
+    <div class="col-md-6">
+      <h1>Características</h1>
       <ul class="list-group">
         {% for c in object.caracteristicas.all %}
         <li class="list-group-item">{{ c.get_nombre_display }}: {{ c.valor }}</li>
         {% endfor %}
       </ul>
-    </article>
+    </div>
     {% endif %}
   </div>
 </main>
