--- a/voltgo/producto/templates/catalogo.html
+++ b/voltgo/producto/templates/catalogo.html
@@ -1,41 +1,58 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Catálogo de Motos Eléctricas</h1>
-    <div id="buscador-container">
-        <form method="get">
-            {{ form.as_p }}
-            <button type="submit">Buscar</button>
-        </form>
-    </div>
-    <br/>
-    <div class="row">
-        {% for producto_dict in productos %}
-            <div class="col-md-3">
-                <div class="card">
-                    <img class="card-img-top" src="{{ producto_dict.producto.url_imagen }}" alt="{{ producto_dict.producto.nombre }}">
-                    <div class="card-body">
-                        <h5 class="card-title">{{ producto_dict.producto.nombre }}</h5>
-                        <p class="card-text">Precio: ${{ producto_dict.producto.precio_base }}</p>
-                        <p class="card-text">Autonomía: {{ producto_dict.autonomia }} horas</p>
-                        <p class="card-text">Velocidad Máxima: {{ producto_dict.velocidad_maxima }} Km/h</p>
-                        <a href="{% url 'detalle-producto' pk=producto_dict.producto.id %}" class="btn btn-primary">Detalles</a>
-                    </div>
-                </div>
+<div class="container">
+    <h1 class="text-center">Catálogo de Motos Eléctricas</h1>
+
+    <div class="row mt-4 ml-4 pl-4">
+        <form method="get" class="form-inline mx-auto">
+            <div class="form-group mr-2">
+                <label for="{{ form.autonomia.id_for_label }}">Autonomía:&nbsp;&nbsp;</label>
+                {{ form.autonomia }}
+            </div>
+            &nbsp;
+            <div class="form-group mr-2">
+                <label for="{{ form.velocidad_maxima.id_for_label }}">Velocidad Máxima:&nbsp;&nbsp;</label>
+                {{ form.velocidad_maxima }}
             </div>
 
-            {% if forloop.counter|divisibleby:4 %}
-                </div><div class="row">
-            {% endif %}
-        {% endfor %}
+            <div class="form-group mr-2">
+                <label for="{{ form.precio_maximo.id_for_label }}">Precio Máximo:&nbsp;&nbsp;</label>
+                {{ form.precio_maximo }}
+            </div>
+
+            <button type="submit" class="btn btn-primary"><i class="fa fa-search"></i> Buscar</button>
+        </form>
     </div>
 
-    <br/>
-    <br/>
 
-    {% if not productos %}
-        <p>No se encontraron productos</p>
-    {% endif %}
+        <div class="mt-4 pt-4 row">
+            {% for producto_dict in productos %}
+                <div class="col-md-3 mb-4">
+                    <div class="card">
+                        <img class="card-img-top" src="{{ producto_dict.producto.url_imagen }}" alt="{{ producto_dict.producto.nombre }}">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ producto_dict.producto.nombre }}</h5>
+                            <p class="card-text">Precio: ${{ producto_dict.producto.precio_base }}</p>
+                            <p class="card-text">Autonomía: {{ producto_dict.autonomia }} horas</p>
+                            <p class="card-text">Velocidad Máxima: {{ producto_dict.velocidad_maxima }} Km/h</p>
+                            <a href="{% url 'detalle-producto' pk=producto_dict.producto.id %}" class="btn btn-primary"><i class="fa fa-info-circle"></i> Detalles</a>
+                        </div>
+                    </div>
+                </div>
+
+                {% if forloop.counter|divisibleby:4 %}
+                    </div><div class="row">
+                {% endif %}
+            {% endfor %}
+        </div>
+
+        {% if not productos %}
+            <br />
+            <br />
+            <p class="text-center">No se encontraron productos</p>
+        {% endif %}
+    </div>
 
     <script>
         document.addEventListener('DOMContentLoaded', function () {
