--- a/voltgo/usuario/templates/account/gestionar_perfil.html
+++ b/voltgo/usuario/templates/account/gestionar_perfil.html
@@ -1,5 +1,6 @@
-<!-- gestionar_perfil.html -->
-{% extends 'base.html' %}
+{% extends "base.html" %}
+
+{% block title %}Edit your account{% endblock %}
 
 {% block content %}
   <h2>Edita perfil</h2>
@@ -39,7 +40,5 @@
       <button type="button">Añadir tarjeta</button>
     </a>
   {% endif %}
-
-
 
 {% endblock %}
