feat(catalogo): Corregidos algunos errores en el modelo de producto y añadido secciones por marcas y buscador por nombre y marca

--- a/voltgo/producto/templates/detalle.html
+++ b/voltgo/producto/templates/detalle.html
@@ -13,7 +13,7 @@
       </div>
       <div class="col-md-6">
         <div class="card-body">
-          <h1 class="card-title display-4">Tecnología de {{ object.empresa.nombre }}</h1>
+          <h1 class="card-title display-4">Tecnología de {{ object.empresa }}</h1>
           <h2 class="h3">{{ object.nombre }}</h2>
           <p class="lead">{{ object.precio_base }} €/hora</p>
           <p class="lead">Stock: {{ object.stock }} uds.</p>
