feat(tienda): implementa formulario venta con validación
añade validación a todos los campos del formulario antes de la pasarela de pago. Además, si el usuario está registrado en el sistema, se autorellenarán los campos con su información del perfil.

Relacionado con #18

--- a/voltgo/producto/templates/carrito.html
+++ b/voltgo/producto/templates/carrito.html
@@ -15,7 +15,7 @@
                     <th>Opciones</th>
                 </tr>
             </thead>
-            <form action="/productos/catalogo/carrito/pagar/" method="POST">
+            <form action="{% url 'pagar-carrito' %}" method="POST">
                 {% csrf_token %}
                 <tbody>
                     {% for item in carrito %}
