--- a/voltgo/tienda/templates/resumen_pedido.html
+++ b/voltgo/tienda/templates/resumen_pedido.html
@@ -31,27 +31,19 @@
                 <header>
                     <h2>Información personal</h2>
                 </header>
-                <input type="text" class="form-control mb-3" name="nombre" value="{{ info_pago.nombre }}" readonly>
-                <input type="email" class="form-control mb-3" name="correo" value="{{ info_pago.email }}" readonly>
-                <input type="tel" class="form-control mb-3" name="tel" value="{{ info_pago.tel }}" readonly>
+                {{ form_cliente }}
             </article>
             <article class="d-flex flex-column">
                 <header>
                     <h2>Información del envío</h2>
                 </header>
-                <input type="text" class="form-control mb-3" name="calle" value="{{info_pago.direccion.calle}}" readonly>
-                <input type="text" class="form-control mb-3" name="apartamento" value="{{info_pago.direccion.apartamento}}" readonly>
-                <input type="text" class="form-control mb-3" name="pais" value="{{info_pago.direccion.pais}}" readonly>
-                <input type="text" class="form-control mb-3" name="ciudad" value="{{info_pago.direccion.ciudad}}" readonly>
-                <input type="text" class="form-control mb-3" name="codigo_postal" value="{{info_pago.direccion.codigo_postal}}" readonly>
+                {{ form_direccion }}
             </article>
             <article class="d-flex flex-column">
                 <header>
                     <h2>Información del pago</h2>
                 </header>
-                <input type="text" class="form-control mb-3" name="iban" value="{{ info_pago.tarjeta.iban }}" readonly>
-                <input type="text" class="form-control mb-3" name="fecha-cad" value="{{ info_pago.tarjeta.fecha_caducidad }}" readonly>
-                <input type="text" class="form-control mb-3" name="cvv" value="{{ info_pago.tarjeta.cvv }}" readonly>
+                {{ form_tarjeta }}
             </article>
             <button type="submit" class="btn btn-success mb-3"><strong>Encargar/pagar ahora</strong></button>
         </section>
