--- a/voltgo/producto/templates/catalogo.html
+++ b/voltgo/producto/templates/catalogo.html
@@ -4,16 +4,16 @@
 <div class="container">
     <h1 class="text-center">Catálogo de Motos Eléctricas</h1>
 
-    <div class="row mt-4 ml-4 pl-4">
+    <div class="row mt-4 ml-4 pl-4 pb-4">
         <form method="get" class="form-inline mx-auto">
             <div class="form-group mr-2">
-                <label for="{{ form.autonomia.id_for_label }}">Autonomía:&nbsp;&nbsp;</label>
-                {{ form.autonomia }}
+                <label for="{{ form.nombre.id_for_label }}">Nombre:&nbsp;&nbsp;</label>
+                {{ form.nombre }}
             </div>
             &nbsp;
             <div class="form-group mr-2">
-                <label for="{{ form.velocidad_maxima.id_for_label }}">Velocidad Máxima:&nbsp;&nbsp;</label>
-                {{ form.velocidad_maxima }}
+                <label for="{{ form.empresa.id_for_label }}">Empresa:&nbsp;&nbsp;</label>
+                {{ form.empresa }}
             </div>
 
             <div class="form-group mr-2">
@@ -54,5 +54,5 @@
     {% if not productos_por_empresa %}
         <p>No se encontraron productos</p>
     {% endif %}
-
+</div>
 {% endblock %}
