--- a/voltgo/producto/templates/catalogo.html
+++ b/voltgo/producto/templates/catalogo.html
@@ -25,34 +25,40 @@
         </form>
     </div>
     {% for empresa, productos in productos_por_empresa.items %}
-        <h2>{{ empresa }}</h2>
-        <div class="row">
-            {% for producto in productos %}
-                <div class="col-md-3">
-                    <div class="card">
-                        <a href="{% url 'detalle-producto' pk=producto.producto.id %}">
-                            <img class="card-img-top" src="{{ producto.producto.url_imagen }}" alt="{{ producto.producto.nombre }}">
-                        </a>
-                        <div class="card-body">
-                            <h5 class="card-title">{{ producto.producto.nombre }}</h5>
-                            <p class="card-text">Precio: ${{ producto.producto.precio_base }}</p>
-                            <p class="card-text">Autonomía: {{ producto.autonomia }} horas</p>
-                            <p class="card-text">Velocidad Máxima: {{ producto.velocidad_maxima }} Km/h</p>
-                            <p class="card-text">Stock: {{ producto.producto.stock }} uds</p>
-                            <a href="{% url 'detalle-producto' pk=producto.producto.id %}" class="btn btn-primary">Detalles</a>
-                        </div>
-                    </div>
+    <h2>{{ empresa }}</h2>
+    <div class="row">
+        {% for producto in productos %}
+        <div class="col-md-3">
+            <div class="card">
+                <a href="{% url 'detalle-producto' pk=producto.producto.id %}">
+                    <img class="card-img-top" src="{{ producto.producto.url_imagen }}"
+                        alt="{{ producto.producto.nombre }}">
+                </a>
+                <div class="card-body">
+                    <h5 class="card-title">{{ producto.producto.nombre }}</h5>
+                    <p class="card-text">Precio: ${{ producto.producto.precio_base }}</p>
+                    <p class="card-text">Autonomía: {{ producto.autonomia }} horas</p>
+                    <p class="card-text">Velocidad Máxima: {{ producto.velocidad_maxima }} Km/h</p>
+                    {% if producto.producto.stock == 0 %}
+                    <p class="card-text text-danger"><strong>No hay stock</strong></p>
+                    {% else %}
+                    <p class="card-text"><strong>Stock: {{ producto.producto.stock }} uds</strong></p>
+                    {% endif %}
+                    <a href="{% url 'detalle-producto' pk=producto.producto.id %}" class="btn btn-primary">Detalles</a>
                 </div>
-
-                {% if forloop.counter|divisibleby:4 %}
-                    </div><div class="row">
-                {% endif %}
-            {% endfor %}
+            </div>
         </div>
+
+        {% if forloop.counter|divisibleby:4 %}
+    </div>
+    <div class="row">
+        {% endif %}
+        {% endfor %}
+    </div>
     {% endfor %}
 
     {% if not productos_por_empresa %}
-        <p>No se encontraron productos</p>
+    <p>No se encontraron productos</p>
     {% endif %}
 </div>
 {% endblock %}
