--- a/voltgo/producto/templates/detalle.html
+++ b/voltgo/producto/templates/detalle.html
@@ -43,24 +43,46 @@
   </div>
   <article>
     <h1>Comentarios</h1>
-    {% if comentarios %}
-      {% for comentario in comentarios %}
-        <p>{{ comentario.comentario }} - {{ comentario.usuario }}, {{ comentario.fecha_comentario }}</p>
-      {% endfor %}
-    {% else %}  
-      <p>No hay comentarios. ¡Se el primero en valorar el producto!</p>
-    {% endif %}
-    {% if request.user.is_authenticated %}
-      <div class="mt-4">
-        <form method="post" action="{% url 'detalle-producto' pk=object.pk %}">
+    
+    <div class="row mb-4">
+      {% if request.user.is_authenticated %}
+      <div class="col-md-12">
+        <form method="post" action="{% url 'detalle-producto' pk=object.pk %}" class="form-inline">
           {% csrf_token %}
-          {{ formulario_comentario.as_p }}
+          <div class="form-group mr-2">
+            <input type="text" name="comentario" class="form-control" placeholder="Escribe tu comentario..." />
+          </div>
           <button type="submit" class="btn btn-primary">Enviar comentario</button>
         </form>
       </div>
-    {% else %}
-      <p>¡Registrate para poder comentar!</p> 
+      {% else %}
+      <div class="mt-4">
+        <h5 class="text-warning">¡Regístrate para poder comentar!</h5> 
+      </div>
     {% endif %}
+    </div>
+
+    <div class="row pb-4">
+      {% if comentarios %}
+        {% for comentario in comentarios %}
+          <div class="col-md-5 mb-3">
+            <div class="card">
+              <div class="card-body">
+                <div class="d-flex justify-content-between align-items-center">
+                  <h6 class="card-title mb-2"><strong>{{ comentario.usuario.first_name }} {{ comentario.usuario.last_name }}</strong></h6>
+                  <small class="text-muted">{{ comentario.fecha_comentario }}</small>
+                </div>
+                <p class="card-text">{{ comentario.comentario }}</p>
+              </div>
+            </div>
+          </div>
+        {% endfor %}
+      {% else %}  
+        <div class="col-md-12">
+          <h5 class="text-info">¡Sé el primero en dejar un comentario!</h5>
+        </div>
+      {% endif %}
+    </div>
   </article>
 </main>
 {% endblock content %}
