--- a/voltgo/tienda/templates/navbar.html
+++ b/voltgo/tienda/templates/navbar.html
@@ -46,6 +46,11 @@
             </a>
           </li>
           <li class="nav-item" id="nav-elemento">
+            <a class="nav-link active" aria-current="page" href="/tienda/seguimiento/">
+              <h7 style="color: white;">Seguimiento de pedido</h7>
+            </a>
+          </li>
+          <li class="nav-item" id="nav-elemento">
             <a class="nav-link active" aria-current="page" href="/about/">
               <h7 style="color: white;">Sobre la US</h7>
             </a>
