--- a/voltgo/tienda/templates/navbar.html
+++ b/voltgo/tienda/templates/navbar.html
@@ -10,7 +10,7 @@
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="../static/css/style.css">
-  <link rel="stylesheet" href="../../../font-awesome/css/font-awesome.min.css">
+  <link rel="stylesheet" href="../../iconos/font-awesome/css/font-awesome.min.css">
 </head>
 
 <body>
