fix(tienda): implementa visualización errores formulario compra
Relacionado con #18

--- a/voltgo/tienda/static/css/style.css
+++ b/voltgo/tienda/static/css/style.css
@@ -275,6 +275,10 @@ form div.field {
   background: #efefef;
 }
 
+.errorlist > li {
+  color: #f00;
+  list-style-type: none;
+}
 
 a {
   color: black;
